Make MolecularDataService work with external ids
So we can virtualise them easily